xee-xslt-ast/tests/snapshots/snapshot_tests__nested_literal_elements.snap
---
source: xee-xslt-ast/tests/snapshot_tests.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:if xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" test=\"true()\"><p><another/></p></xsl:if>\"#)"
---
Ok(Instruction(If(If(
  test: Expression(
    xpath: XPath(Expr([
      Path(PathExpr(
        steps: [
          PrimaryExpr(FunctionCall(FunctionCall(
            name: OwnedName(
              local_name_str: "true",
              namespace_str: "http://www.w3.org/2005/xpath-functions",
              prefix_str: "",
            ),
            arguments: [],
          ))),
        ],
      )),
    ])),
    span: Span(
      start: 63,
      end: 69,
    ),
  ),
  sequence_constructor: [
    Content(Element(ElementNode(
      name: OwnedName(
        local_name_str: "p",
        namespace_str: "",
        prefix_str: "",
      ),
      namespaces: [],
      attributes: [],
      sequence_constructor: [
        Content(Element(ElementNode(
          name: OwnedName(
            local_name_str: "another",
            namespace_str: "",
            prefix_str: "",
          ),
          namespaces: [],
          attributes: [],
          sequence_constructor: [],
          span: Span(
            start: 75,
            end: 82,
          ),
        ))),
      ],
      span: Span(
        start: 72,
        end: 73,
      ),
    ))),
  ],
  span: Span(
    start: 1,
    end: 7,
  ),
))))
