xee-xslt-ast/tests/snapshots/snapshot_tests__template_default_mode_implicit_fallback_to_default.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_transform(r##\"<xsl:transform xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" version=\"3\" default-mode=\"foo\"><xsl:template match=\"*\">a</xsl:template></xsl:transform>\"##)"
---
Ok(Transform(
  id: None,
  input_type_annotations: None,
  extension_element_prefixes: None,
  declarations: [
    Template(Template(
      match_: Some(Pattern(
        pattern: Expr(Path(PathExpr(
          root: Relative,
          steps: [
            AxisStep(AxisStep(
              forward: Child,
              node_test: NameTest(Star),
              predicates: [],
            )),
          ],
        ))),
        span: Span(
          start: 116,
          end: 117,
        ),
      )),
      name: None,
      priority: None,
      mode: [
        EqName(OwnedName(
          local_name_str: "foo",
          namespace_str: "",
          prefix_str: "",
        )),
      ],
      as_: None,
      visibility: None,
      context_item: None,
      params: [],
      sequence_constructor: [
        Content(Text("a")),
      ],
      span: Span(
        start: 96,
        end: 108,
      ),
    )),
  ],
  span: Span(
    start: 1,
    end: 14,
  ),
))
